<resources>
    <string name="app_name">DentalHousekeeper</string>

    <!--注册登录相关-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password_">忘记密码?</string>
    <string name="forget_password">忘记密码</string>
    <string name="enter_password">密码</string>
    <string name="enter_account">手机号码</string>
    <string name="err_account_or_password">账号或密码错误</string>
    <string name="please_login">该手机号已注册，请前往登录</string>
    <string name="loading_login">注册成功,即将进入登录界面</string>
    <string name="password_length">密码的长度为8-18位</string>
    <string name="comfirm_password">请确认密码</string>
    <string name="enter_correct_phone">请输入正确的手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="validatior_phone"></string>
    <string name="login_doctor">牙医登录</string>
    <string name="register_doctor">医生注册</string>
    <string name="register_patient">患者注册</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="setting_password_specifications">设置6-18位密码</string>
    <string name="error_empty_phone">手机号不能为空</string>
    <string name="error_format_phone">请输入正确的手机号格式</string>
    <string name="error_confirm_password">密码不一致</string>
    <string name="success_register">注册成功</string>
    <string name="success_send_sms_code">验证码发送成功</string>
    <string name="error_format_code">验证码格式错误</string>
    <string name="error_register">注册失败，请稍后再试</string>
    <string name="count_second">%1$ds</string>

    <!--网络相关-->
    <string name="error_network_unknown_host">找不到服务器,请稍后再试!</string>
    <string name="error_network_connect">连接失败,请稍后再试!</string>
    <string name="error_network_timeout">连接超时,请稍后再试!</string>
    <string name="error_network_not_auth">登录信息过期,请重新登录!</string>
    <string name="error_network_not_permission">你没有权限访问!</string>
    <string name="error_network_not_found">你访问的内容不存在!</string>
    <string name="error_network_server">服务器错误,请稍后再试!</string>
    <string name="error_network_unknown">未知错误,请稍后再试!</string>
    <string name="loading">拼命加载中.</string>
    <string name="error_response_sign">接口签名错误，请稍后再试！</string>
    <string name="error_response_decrypt">接口解密错误，请稍后再试！</string>
    <string name="error_login">登录失败</string>
    <string name="success_login">登录成功</string>
    <string name="login_patient">患者登录</string>
    <string name="forward_register">前往注册</string>
    <string name="area_value2">%1$s-%2$s-%3$s</string>

    <string name="error_send_message">发送失败，请稍后再试！</string>
    <string name="hint_enter_message">请输入你要发送消息.</string>
    <string name="hint_pay_wait">支付成功</string>
    <string name="error_pay_failed">支付失败，请稍后再试！</string>
    <string name="app_toast_login_fail">Login failed [%d]%s</string>
    <string name="avatar">头像</string>
    <string name="hint_description">请向大家介绍下自己吧！</string>
    <string name="app_toast_register_success_and_logging_in">Registered successfully</string>
    <string name="app_toast_failed_to_set">Failed: %s</string>
</resources>
