<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient_login"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
        <View style="@style/MyView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="75dp"
                android:background="@drawable/shape_radius_background_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp">

                <!--账号按钮-->
                <EditText
                    android:layout_marginTop="70dp"
                    android:id="@+id/account"
                    style="@style/LREditText"
                    android:background="@drawable/shape_border_down"
                    android:padding="20dp"
                    android:text="18237056877"
                    android:gravity="center"
                    android:layout_height="60dp"
                    android:hint="@string/enter_account"
                    android:maxLength="11"
                    android:textSize="15sp" />

                <!--密码输入-->
                <EditText
                    android:text="123456"
                    android:id="@+id/password"
                    style="@style/LREditText"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_border_up"
                    android:gravity="center"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:textSize="15sp" />



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--注册按钮-->
                    <Button
                        android:id="@+id/register"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:background="@color/transparent"
                        android:text="@string/forward_register"
                        android:textColor="@color/main_color" />

                    <View style="@style/MyView" />
                    <!--忘记密码按钮-->
                    <Button
                        android:id="@+id/forget"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:background="@color/transparent"
                        android:text="@string/forget_password_"
                        android:textColor="@color/light_grey" />


                </LinearLayout>
                <!--登录按钮-->
                <Button
                    android:id="@+id/login"
                    style="@style/LRButton"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_border_blue"
                    android:text="@string/login"
                    android:textColor="@color/main_color"
                    android:textSize="15sp" />

                <!--忘记密码按钮-->
                <Button
                    android:id="@+id/replace_login"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/light_grey"
                    android:background="@color/transparent"
                    android:text="@string/login_patient" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@mipmap/logo"
                    android:stateListAnimator="@null" />
            </LinearLayout>

        </RelativeLayout>

        <View style="@style/MyView"
            android:layout_weight="2"/>
    </LinearLayout>

</RelativeLayout>